add client generator openapi.v3

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,6 @@ REDIS_CHANNEL           = 'channel'
 # Upload file settings
 MAX_FILE_SIZE           ='100'
 MAX_NUMBER_OF_FILES     ='3'
+
+# External Client Base URL
+PET_STORE_BASE_URL   = 'https://petstore3.swagger.io/api/v3'
