--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
     "prepare": "husky",
-    "prisma": "npx prisma generate"
+    "prisma": "npx prisma generate",
+    "client:generate": "node generate-client.js"
   },
   "keywords": [],
   "author": "autherName <email@email.com>",
@@ -36,6 +37,7 @@
     "@fastify/websocket": "^11.0.1",
     "@prisma/client": "^5.20.0",
     "@sinclair/typebox": "^0.33.15",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
@@ -50,7 +52,6 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@platformatic/client": "^2.5.3",
     "@types/bcrypt": "^5.0.2",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.7.5",
@@ -65,6 +66,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "fastify-tsconfig": "^2.0.0",
+    "openapi-typescript": "^7.4.1",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
   },
