--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ JWT_EXPIRE              = '1h'
 COOKIE_SECRET           = 'secret'
 
 # Primsa DB
-DATABASE_URL            = 'postgresql://postgres:password@localhost:5432/app?schema=public'
+DATABASE_URL            = 'postgresql://postgres:postgres@localhost:5432/app?schema=public'
 
 # Redis
 REDIS_ENABLED           = true
@@ -29,4 +29,4 @@ MAX_FILE_SIZE           ='100'
 MAX_NUMBER_OF_FILES     ='3'
 
 # External Client Base URL
-PET_STORE_BASE_URL   = 'https://petstore3.swagger.io/api/v3'
+
