generate offline prisma mirror server and other minor changes

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,7 @@ COOKIE_SECRET           = 'secret'
 
 # Primsa DB
 DATABASE_URL            = 'postgresql://postgres:postgres@localhost:5432/app?schema=public'
+PRISMA_ENGINES_MIRROR   = 'http://localhost:3000/download'
 
 # Redis
 REDIS_ENABLED           = true
@@ -27,6 +28,8 @@ REDIS_CHANNEL           = 'channel'
 # Upload file settings
 MAX_FILE_SIZE           ='100'
 MAX_NUMBER_OF_FILES     ='3'
+
+
 
 # External Client Base URL
 
