refactor: changes app loading plugins,hooks,service and routes manually to control seuquence.

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,12 @@ JWT_EXPIRE              = '1h'
 COOKIE_SECRET           = 'secret'
 
 # Primsa DB
-DATABASE_URL            = 'postgresql://postgres:postgres@localhost:5432/app?schema=public'
-PRISMA_ENGINES_MIRROR   = 'http://localhost:3000/download'
+DATABASE_URL            = 'mysql://root:password@localhost:3306/app'
+PRISMA_ENGINES_MIRROR   = 'http://localhost:3000/5.21.0'
+PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING = 1
 
 # Redis
-REDIS_ENABLED           = true
+REDIS_ENABLED           = false
 REDIS_HOST              = 'localhost'
 REDIS_PORT              = 6379
 REDIS_USERNAME          = ''
