--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,26 +8,22 @@ services:
       - "backend"
     healthcheck:
       test: ["CMD-SHELL", "redis-cli ping"]
-  postgres:
-    image: postgres:16
-    container_name: postgres
+  mysql:
+    image: mysql:8
+    container_name: mysql
     ports:
-      - "5432:5432"
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - "backend"
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      # init.sql will be executed on the first run
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    environment:
-      POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
-      POSTGRES_DB: "postgres"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 1s
+      timeout: 3s
+      retries: 30
 networks:
   backend:
 
