--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "app.ts",
   "scripts": {
     "test": "npm run build:ts && tsc -p test/tsconfig.json && c8 --reporter=html node --test -r ts-node/register test/**/*.ts",
+    "debug": "npm run build:ts && fastify start -l info dist/app.js",
     "start": "fastify start -l info dist/app.js",
     "build:ts": "tsc",
     "watch:ts": "tsc -w",
@@ -14,7 +15,11 @@
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
     "prepare": "husky",
     "prisma": "npx prisma generate",
-    "client:generate": "node generate-client.js"
+    "client:generate": "node generate-client.mjs",
+    "release": "release-it",
+    "release:patch": "release-it patch",
+    "release:minor": "release-it minor",
+    "release:major": "release-it major"
   },
   "keywords": [],
   "author": "autherName <email@email.com>",
@@ -35,10 +40,10 @@
     "@fastify/swagger-ui": "^5.0.1",
     "@fastify/type-provider-typebox": "^5.0.0",
     "@fastify/websocket": "^11.0.1",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@sinclair/typebox": "^0.33.15",
+    "argon2": "^0.41.1",
     "axios": "^1.7.7",
-    "bcrypt": "^5.1.1",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.1",
@@ -47,12 +52,14 @@
     "i18next-fs-backend": "^2.3.2",
     "i18next-http-middleware": "^3.6.0",
     "moment": "^2.30.1",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.1",
     "qs": "^6.13.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@release-it/conventional-changelog": "^9.0.0",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.7.5",
     "@types/tap": "^15.0.12",
@@ -61,18 +68,69 @@
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "c8": "^10.1.2",
+    "chalk": "^5.3.0",
+    "change-case": "^5.4.4",
     "concurrently": "^9.0.1",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "fastify-tsconfig": "^2.0.0",
     "openapi-typescript": "^7.4.1",
+    "pluralize": "^8.0.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.6.3"
+    "release-it": "^17.10.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format"
+      "pre-commit": "npm run format && npm run lint"
+    }
+  },
+  "release-it": {
+    "git": {
+      "tagName": "v${version}",
+      "commitMessage": "chore(release): v${version}",
+      "requireCleanWorkingDir": true,
+      "requireBranch": "main"
+    },
+    "github": {
+      "release": true,
+      "releaseName": "v${version}"
+    },
+    "npm": {
+      "publish": false
+    },
+    "plugins": {
+      "@release-it/conventional-changelog": {
+        "preset": {
+          "infile": "CHANGELOG.md",
+          "name": "conventionalcommits",
+          "types": [
+            {
+              "type": "feat",
+              "section": "Features"
+            },
+            {
+              "type": "fix",
+              "section": "Bug Fixes"
+            },
+            {
+              "type": "refactor",
+              "section": "Refactor"
+            },
+            {
+              "type": "perf",
+              "section": "Performance"
+            },
+            {
+              "type": "test",
+              "section": "Tests"
+            }
+          ]
+        }
+      }
     }
   }
 }
