--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "chalk": "^5.3.0",
     "change-case": "^5.4.4",
     "concurrently": "^9.0.1",
+    "conventional-changelog": "^6.0.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
