--- a/package.json
+++ b/package.json
@@ -91,17 +91,19 @@
   },
   "release-it": {
     "git": {
-      "tagName": "v${version}",
-      "commitMessage": "chore(release): v${version}",
-      "requireBranch": "main"
+      "commitMessage": "chore(release): v${version}"
+    },
+    "github": {
+      "release": true,
+      "releaseName": "v${version}"
     },
     "npm": {
       "publish": false
     },
     "plugins": {
       "@release-it/conventional-changelog": {
+        "infile": "CHANGELOG.md",
         "preset": {
-          "infile": "CHANGELOG.md",
           "name": "conventionalcommits",
           "types": [
             {
