--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js",
     "prepare": "husky",
     "prisma": "npx prisma generate",
-    "client:generate": "node generate-client.mjs",
-    "release": "release-it",
-    "release:patch": "release-it patch",
-    "release:minor": "release-it minor",
-    "release:major": "release-it major"
+    "client:generate": "node generate-client.mjs"
   },
   "keywords": [],
   "author": "autherName <email@email.com>",
@@ -57,9 +53,6 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "latest",
-    "@commitlint/config-conventional": "^19.5.0",
-    "@release-it/conventional-changelog": "^9.0.0",
     "@types/mime-types": "^2.1.4",
     "@types/node": "^22.7.5",
     "@types/tap": "^15.0.12",
@@ -87,48 +80,6 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm run format && npm run lint"
-    }
-  },
-  "release-it": {
-    "git": {
-      "commitMessage": "chore(release): v${version}"
-    },
-    "github": {
-      "release": true,
-      "releaseName": "v${version}"
-    },
-    "npm": {
-      "publish": false
-    },
-    "plugins": {
-      "@release-it/conventional-changelog": {
-        "infile": "CHANGELOG.md",
-        "preset": {
-          "name": "conventionalcommits",
-          "types": [
-            {
-              "type": "feat",
-              "section": "Features"
-            },
-            {
-              "type": "fix",
-              "section": "Bug Fixes"
-            },
-            {
-              "type": "refactor",
-              "section": "Refactor"
-            },
-            {
-              "type": "perf",
-              "section": "Performance"
-            },
-            {
-              "type": "test",
-              "section": "Tests"
-            }
-          ]
-        }
-      }
     }
   }
 }
