--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "client:generate": "node generate-client.mjs"
   },
   "keywords": [],
-  "author": "autherName <email@email.com>",
+  "author": "Shafi S.Almutiair <shafi.almutairi@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@fastify/autoload": "^6.0.2",
@@ -64,7 +64,6 @@
     "chalk": "^5.3.0",
     "change-case": "^5.4.4",
     "concurrently": "^9.0.1",
-    "conventional-changelog": "^6.0.0",
     "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -72,10 +71,8 @@
     "openapi-typescript": "^7.4.1",
     "pluralize": "^8.0.0",
     "prettier": "^3.3.3",
-    "release-it": "^17.10.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "typescript": "^5.6.3"
   },
   "husky": {
     "hooks": {
